css/1.css
body {
	padding-top: 50px;
}

.background {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	
	background-image: url("../images/low-poly-1094512_1280.png");
	background-repeat: no-repeat;
	background-size: cover;
}

.page {
	position: relative;
}

.gray-background {
	background: #eeeeee;
}

.octicon {
	vertical-align: middle;
}

.btn-primary .octicon {
	fill: #ffffff;
}

.blur-background {
	-webkit-backdrop-filter: blur(20px) brightness(130%);
}

.footer {
	margin-top: 30px;
	margin-bottom: 100px;
}

.footer .container {
	padding-top: 10px;
}

html:not(.js) .js,
html.js .no-js {
	display: none;
}

